--- a/bibliotecaapp/templates/biblioteca/libro_list.html
+++ b/bibliotecaapp/templates/biblioteca/libro_list.html
@@ -9,15 +9,12 @@
         {% for libro in libro_list %}
             <li>
                 <h2><a href="{% url 'libro_details' pk=libro.pk%}">{{ libro.titulo }}</a></h2>
-                <form action="{% url 'libro_edit' pk=libro.pk%}" method="POST">
-                    {% csrf_token %}
-                    <button type="submit">Editar este libro</button>
-                </form>
                 <a href="{% url 'libro_delete' pk=libro.pk%}" role="button">Borrar</a>
             </li>
         {% empty %}
             <li>No hay libros por mostrar.</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'new' %}" role="button">Añadir Nuevo</a>
 </body>
 </html>
