no funciona el editar

--- a/bibliotecaapp/templates/biblioteca/libro_list.html
+++ b/bibliotecaapp/templates/biblioteca/libro_list.html
@@ -10,6 +10,7 @@
             <li>
                 <h2><a href="{% url 'libro_details' pk=libro.pk%}">{{ libro.titulo }}</a></h2>
                 <a href="{% url 'libro_delete' pk=libro.pk%}" role="button">Borrar</a>
+                <a href="{% url 'libro_edit' pk=libro.pk%}" role="button">Editar</a>
             </li>
         {% empty %}
             <li>No hay libros por mostrar.</li>
