--- a/bibliotecaapp/templates/biblioteca/new.html
+++ b/bibliotecaapp/templates/biblioteca/new.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuevo libro</title>
+    <title>Libros</title>    
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.classless.min.css">
 </head>
 <body>
+
+    <h1>Completar formulario</h1>
     <form action="{% url 'new' %}" method="POST">
-        {% csrf_token %}
+        {% csrf_token%}
         {{ form.as_p }}
         <button type="submit">Dale caña</button>
     </form>
