--- a/bibliotecaapp/templates/biblioteca/libro_edit.html
+++ b/bibliotecaapp/templates/biblioteca/libro_edit.html
@@ -11,7 +11,7 @@
     <form action="{% url 'libro_edit' pk=libro.pk %}" method="POST">
         {% csrf_token%}
         {{ form.as_p }}
-        <button type="submit" value="Update">Dale caña</button>
+        <button type="submit">Dale caña</button>
     </form>
 </body>
 </html>
