--- a/bibliotecaapp/templates/biblioteca/libro_list.html
+++ b/bibliotecaapp/templates/biblioteca/libro_list.html
@@ -5,8 +5,24 @@
 </head>
 <body>
     <h1>Lista de Libros</h1>
+
     <ul>
-        {% for libro in libro_list %}
+        <h4>Libros Disponibles</h4>
+        {% for libro in libros_disponibles %}
+            <li>
+                <h2><a href="{% url 'libro_details' pk=libro.pk%}">{{ libro.titulo }}</a></h2>
+                {% if libro.portada %}
+                    <img src="{{ libro.portada.url }}">
+                {% endif %}
+                <a href="{% url 'libro_delete' pk=libro.pk%}" role="button">Borrar</a>
+                <a href="{% url 'libro_edit' pk=libro.pk%}" role="button">Editar</a>
+            </li>
+        {% empty %}
+            <li>No hay libros por mostrar.</li>
+        {% endfor %}
+
+        <h4>Libros Prestados</h4>
+        {% for libro in libros_prestados %}
             <li>
                 <h2><a href="{% url 'libro_details' pk=libro.pk%}">{{ libro.titulo }}</a></h2>
                 {% if libro.portada %}
