--- a/bibliotecaapp/templates/biblioteca/libro_devolver.html
+++ b/bibliotecaapp/templates/biblioteca/libro_devolver.html
@@ -11,16 +11,16 @@
     <h1>¿Confirmar la devolución del siguiente libro?</h1>
 
     <h3>Titulo</h3>
-    <p> {{ libro.titulo }}</p>
+    <p> {{ prestamo.libro.titulo }}</p>
 
     <h3>Autor</h3>
-    <p> {{ libro.autor }}</p>
+    <p> {{ prestamo.libro.autor }}</p>
 
     <h3>Editorial</h3>
-    <p> {{ libro.editorial }}</p>
+    <p> {{ prestamo.libro.editorial }}</p>
 
-    <form action="{% url 'libro_devolver' pk=libro.pk %}" method="POST">
-        {% csrf_token%}
+    <form method="POST">
+        {% csrf_token %}
         <button type="submit">Dale caña</button>
     </form>
 </body>
