--- a/bibliotecaapp/templates/biblioteca/libro_list.html
+++ b/bibliotecaapp/templates/biblioteca/libro_list.html
@@ -20,23 +20,10 @@
             </li>
         {% empty %}
             <li>No hay libros por mostrar.</li>
-        {% endfor %}
-
-        <h4>Libros Prestados</h4>
-        {% for libro in libros_prestados %}
-            <li>
-                <h2><a href="{% url 'libro_details' pk=libro.pk%}">{{ libro.titulo }}</a></h2>
-                {% if libro.portada %}
-                    <img src="{{ libro.portada.url }}">
-                {% endif %}
-                <a href="{% url 'libro_delete' pk=libro.pk%}" role="button">Borrar</a>
-                <a href="{% url 'libro_edit' pk=libro.pk%}" role="button">Editar</a>
-                <a href="{% url 'libro_devolver' pk=libro.pk%}" role="button">Devolver</a>
-            </li>
-        {% empty %}
-            <li>No hay libros por mostrar.</li>
-        {% endfor %}
+        {% endfor %}   
     </ul>
+    <br><br>
     <a href="{% url 'new' %}" role="button">Añadir Nuevo</a>
+    <a href="{% url 'mis_libros'%}" role="button">Mis Libros</a>
 </body>
 </html>
