--- a/bibliotecaapp/templates/biblioteca/mis_libros.html
+++ b/bibliotecaapp/templates/biblioteca/mis_libros.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Libros</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.classless.min.css">
+    <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
 </head>
 <body>
     <h4>Libros aun Reservados</h4>
         {% for libro in libros_disponibles_usuario %}
             <li>
-                <h2><a href="{% url 'libro_details' pk=libro.libro.pk%}">{{ libro.libro }}</a></h2>
+                {% if fecha_hoy > libro.fechaPrestamo %}
+                    <h2><a class="prestamoRetraso" href="{% url 'libro_details' pk=libro.libro.pk%}">{{ libro.libro }}</a></h2>
+                {% else %}
+                    <h2><a href="{% url 'libro_details' pk=libro.libro.pk%}">{{ libro.libro }}</a></h2>
+                {% endif %}
+
                 {% if libro.libro %}
                     <img src="{{ libro.libro.portada.url }}">
                 {% endif %}
@@ -19,7 +26,7 @@
         {% empty %}
             <li>No hay libros por mostrar.</li>
         {% endfor %}
-
+            <br><br>
 
     <h4>Libros Devueltos</h4>
         {% for libro in libros_devueltos_usuario %}
